--- a/hello_world_GARCIA.html
+++ b/hello_world_GARCIA.html
@@ -4,6 +4,6 @@
     <title>Hello World</title>
   </head>
   <body>
-    <h1> Hello WOrld, I'm Jose</h1>
+    <h1> Hello World, I'm Jose</h1>
   </body>
 </html>
